--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -1,7 +1,10 @@
+/*
+* @prettier
+*/
 @font-face {
   font-family: 'Arial-MT';
-  src: url("../assets/fonts/Arial-MT.woff");
- }
+  src: url('../assets/fonts/Arial-MT.woff');
+}
 
 * {
   box-sizing: border-box;
@@ -28,7 +31,7 @@ body {
   align-items: flex-start;
   width: 100%;
   height: 30vh;
-  min-height: 220px;  
+  min-height: 220px;
   padding: 20px;
 }
 
@@ -49,9 +52,9 @@ body {
   padding: 5px;
   padding-left: 20px;
   list-style: none;
-  opacity: .8;
+  opacity: 0.8;
   cursor: pointer;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .play-item:hover {
@@ -59,7 +62,7 @@ body {
 }
 
 .play-item::before {
-  content: "\2713";  
+  content: '\2713';
   position: absolute;
   left: 0;
   top: 2px;
@@ -67,7 +70,7 @@ body {
 }
 
 .item-active::before {
-  color: #C5B358;
+  color: #c5b358;
 }
 
 .player-icon,
@@ -81,9 +84,9 @@ body {
   background-color: transparent;
   border: 0;
   outline: 0;
-  opacity: .8;
+  opacity: 0.8;
   cursor: pointer;
-  transition: .3s;  
+  transition: 0.3s;
 }
 
 .player-icon:hover,
@@ -96,7 +99,7 @@ body {
 .slider-icon:active,
 .change-quote:active {
   border: 0;
-  outline: 0;  
+  outline: 0;
   transform: scale(1.1);
 }
 
@@ -104,19 +107,19 @@ body {
   width: 40px;
   height: 40px;
   background-size: 40px 40px;
-  background-image: url("../assets/svg/play.svg");
+  background-image: url('../assets/svg/play.svg');
 }
 
 .pause {
-  background-image: url("../assets/svg/pause.svg");
+  background-image: url('../assets/svg/pause.svg');
 }
 
 .play-prev {
-  background-image: url("../assets/svg/play-prev.svg");
+  background-image: url('../assets/svg/play-prev.svg');
 }
 
 .play-next {
-  background-image: url("../assets/svg/play-next.svg");
+  background-image: url('../assets/svg/play-next.svg');
 }
 
 .weather {
@@ -126,7 +129,7 @@ body {
   align-items: flex-start;
   row-gap: 5px;
   width: 180px;
-  min-height: 180px;  
+  min-height: 180px;
   text-align: left;
 }
 
@@ -152,17 +155,17 @@ body {
   padding: 5px;
   font-size: 20px;
   line-height: 24px;
-  color: #fff;  
+  color: #fff;
   border: 0;
   outline: 0;
   border-bottom: 1px solid #fff;
   background-color: transparent;
 }
 
-.city::placeholder {  
+.city::placeholder {
   font-size: 20px;
   color: #fff;
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .main {
@@ -173,7 +176,7 @@ body {
   align-items: center;
   width: 100%;
   height: 40vh;
-  min-height: 260px;  
+  min-height: 260px;
   padding: 20px;
 }
 
@@ -186,12 +189,12 @@ body {
 
 .slide-prev {
   left: 20px;
-  background-image: url("../assets/svg/slider-prev.svg");
+  background-image: url('../assets/svg/slider-prev.svg');
 }
 
 .slide-next {
   right: 20px;
-  background-image: url("../assets/svg/slider-next.svg");
+  background-image: url('../assets/svg/slider-next.svg');
 }
 
 .time {
@@ -199,7 +202,7 @@ body {
   margin-bottom: 10px;
   font-family: 'Arial-MT';
   font-size: 100px;
-  letter-spacing: -4px;  
+  letter-spacing: -4px;
 }
 
 .date {
@@ -219,7 +222,7 @@ body {
 }
 
 .greeting {
-  flex: 1;  
+  flex: 1;
   padding: 10px;
   text-align: right;
 }
@@ -238,7 +241,7 @@ body {
 
 .name::placeholder {
   color: #fff;
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .footer {
@@ -248,13 +251,13 @@ body {
   align-items: center;
   width: 100%;
   height: 30vh;
-  min-height: 160px;  
+  min-height: 160px;
   padding: 20px;
 }
 
 .change-quote {
   margin-bottom: 30px;
-  background-image: url("../assets/svg/reload.svg");  
+  background-image: url('../assets/svg/reload.svg');
 }
 
 .quote {
@@ -265,10 +268,126 @@ body {
   min-height: 20px;
 }
 
+.label {
+  display: flex;
+  border-radius: 9999px;
+  height: 25px;
+  width: 45px;
+
+  /* OFF status */
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+.label.active {
+  background-color: #357edd;
+  border: 1px solid #357edd;
+  justify-content: flex-end;
+}
+
+.label-input {
+  display: none;
+}
+
+.label-circle {
+  border-radius: 9999px;
+  width: 25px;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.set {
+  /* position: absolute; */
+  position: relative;
+  top: 10px;
+  /* left: calc(50% - 250px); */
+  z-index: 5;
+}
+.setting-icon {
+  width: 25px;
+  opacity: 0.6;
+  cursor: pointer;
+}
+.setting-icon:hover {
+  opacity: 1;
+}
+.settings {
+  min-width: 500px;
+  text-align: left;
+  color: #fff;
+  background-color: #424d5b;
+  border-radius: 5px;
+}
+.settings {
+  /* opacity: 0; */
+  /* visibility: hidden; */
+}
+
+.settings .head,
+.settings .body {
+  padding: 16px 8px;
+}
+.settings .head + .body {
+  border-top: 1px solid #ccc;
+}
+.settings .head {
+  text-align: center;
+  position: relative;
+}
+.user-info {
+  margin-top: 8px;
+}
+.user-name {
+  font-size: 18px;
+  font-weight: bold;
+}
+.user-location {
+  font-size: 14px;
+}
+.settings .close {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.setting > dd + dd {
+  margin-top: 15px;
+  border-top: 2px solid #fff;
+}
+.setting .setting_item {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.setting .setting_item + .setting_item {
+  border-top: 1px solid #ccc;
+}
+.setting .setting_item .item_options {
+  flex-grow: 1;
+  padding: 0 8px;
+}
+.fa,
+.fas {
+  padding: 0 5px;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 @media (max-width: 768px) {
   .time {
     min-height: 80px;
-    font-size: 72px;    
+    font-size: 72px;
   }
 
   .greeting-container {
