fix: fix toDo localStorage

--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -447,6 +447,9 @@ body {
   align-items: center;
   padding: 5px 0;
 }
+.toDo-text{
+  pointer-events: none;
+}
 .toDo.done {
   text-decoration: line-through;
 }
