--- a/art-quiz/src/scss/entry.scss
+++ b/art-quiz/src/scss/entry.scss
@@ -27,3 +27,7 @@
   width: 160px;
   background: center / contain no-repeat url('../assets/svg/art_quiz.svg');
 }
+.developer{
+  color: #fff;
+  text-decoration: none;
+}
