--- a/art-quiz/src/components/entry.html
+++ b/art-quiz/src/components/entry.html
@@ -4,7 +4,7 @@
   </header>
   <div class="entry__inner">
     <div class="entry__logo"></div>
-    <button class="entry__btn btn">Artist quiz</button>
-    <button class="entry__btn btn">Pictures quiz</button>
+    <button class="entry__btn btn" data-quiztype="artist">Artist quiz</button>
+    <button class="entry__btn btn" data-quiztype="painting">Pictures quiz</button>
   </div>
 </div>
