feat: add settings routing

--- a/art-quiz/src/components/settings.html
+++ b/art-quiz/src/components/settings.html
@@ -6,7 +6,7 @@
   <form class="settings__form">
     <section class="settings__section">
       <h2 class="settings__section-title">Volume</h2>
-      <input class="setting__volume range-input" type="range" min="0" step="10" value="40">
+      <input class="settings__volume range-input" type="range" min="0" step="10" value="40">
       <div class="settings__volume-icons">
         <img class="settings__volume-icon" src="../assets/svg/bi_volume-mute.svg" alt="">
         <img class="settings__volume-icon" src="../assets/svg/bi_volume-down.svg" alt="">
@@ -14,7 +14,7 @@
     </section>
     <section class="settings__section">
       <h2 class="settings__section-title">Time game</h2>
-      <label class="settings__btime" for="switcher"> On
+      <label class="settings__time-mood" for="switcher"> On
         <div class="switch-box">
           <input type="checkbox" id="switcher" class="switcher" />
           <label for="switcher" class="switch"></label>
