--- a/art-quiz/src/scss/settings.scss
+++ b/art-quiz/src/scss/settings.scss
@@ -26,7 +26,7 @@
   width: calc(100% - 30px);
   margin-top: 5px;
 }
-.settings__btime {
+.settings__time-mood {
   display: flex;
   align-items: center;
   margin: 0 auto;
