fix: fix routing

--- a/art-quiz/src/components/entry.html
+++ b/art-quiz/src/components/entry.html
@@ -8,3 +8,10 @@
     <button class="entry__btn btn" data-quiztype="painting">Pictures quiz</button>
   </div>
 </div>
+<footer class="footer">
+  <a href="https://rs.school/js/" target="_blank">
+      <img class="rs-logo icon" src="../assets/svg/rs_school_js.svg" alt="logo: rs school">
+  </a>
+  <a class="developer icon" href="https://github.com/KatiaZakharina" target="_blank">Katia Zakharina</a>
+  <span class="year">2021</span>
+</footer>
