--- a/art-quiz/src/scss/entry.scss
+++ b/art-quiz/src/scss/entry.scss
@@ -21,13 +21,24 @@
   width: 100%;
   margin-top: 20px;
 }
+.footer {
+  position: fixed;
+  bottom: 0;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: calc(100vw - 40px);
+  padding: 10px 0;
+  font-size: $fz6;
+}
 .entry__logo {
   margin-bottom: 10px;
   height: 62px;
   width: 160px;
   background: center / contain no-repeat url('../assets/svg/art_quiz.svg');
 }
-.developer{
+.developer {
   color: #fff;
   text-decoration: none;
 }
