--- a/art-quiz/src/scss/index.scss
+++ b/art-quiz/src/scss/index.scss
@@ -16,7 +16,18 @@ $fz6: 14px;
   transition: 200ms cubic-bezier(0.17, 0.67, 0.56, 0.84);
   transition-delay: 50ms;
 }
+@mixin flex-space-between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@mixin flex-column{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 @import './base.scss';
 @import './entry.scss';
 @import './settings.scss';
+@import './category.scss';
