--- a/art-quiz/src/scss/category.scss
+++ b/art-quiz/src/scss/category.scss
@@ -21,20 +21,6 @@
   &::-webkit-scrollbar {
     width: 0;
   }
-  &::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 70%;
-    bottom: 75px;
-    left: 0;
-    background: linear-gradient(
-      180deg,
-      rgba(0, 0, 0, 0) 0%,
-      rgba(0, 0, 0, 0) 90%,
-      rgba(0, 0, 0, 0.7) 100%
-    );
-  }
   &__inner {
     column-count: 2;
     gap: 20px;
@@ -42,10 +28,14 @@
 }
 
 .card {
+  position: relative;
+  margin-bottom: 25px;
+  width: max-content;
+  overflow: hidden;
+  cursor: pointer;
   &__painting {
-    margin-bottom: 25px;
-    height: 155px;
-    width: 155px;
+    height: calc(50vw - 40px);
+    width: calc(50vw - 40px);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
@@ -57,13 +47,53 @@
     margin-bottom: 8px;
   }
   &__title {
+    position: relative;
     font-size: $fz5;
+  }
+  &__details {
+    position: absolute;
+    bottom: 25px;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    color: $main-color;
+    background: $accent-color;
+    transition: 0.2s;
+    border-radius: 0 0 15px 15px;
+    transform-origin: bottom;
+    transform: translateY(80px);
   }
   &_inactive .card__painting {
     filter: grayscale(100%);
   }
   &_inactive .card__score {
     display: none;
+  }
+  &_completed {
+    filter: none;
+    &:hover .card__details {
+      transform: translateY(+25px);
+    }
+    &:hover .card__header {
+      color: $accent-color;
+      & .card__title {
+        text-decoration: underline;
+      }
+      & .card__title::after {
+        content: '';
+        position: absolute;
+        top: 5px;
+        right: -15px;
+        width: 12px;
+        height: 9px;
+        background-image: url('../assets/svg/eye.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+    }
   }
 }
 
