feat: add subcategory pages

--- a/art-quiz/src/components/settings.html
+++ b/art-quiz/src/components/settings.html
@@ -1,6 +1,6 @@
 <div class="settings">
   <header class="settings__header">
-    <img class="settings__arrow icon" src="../assets/svg/eva_arrow-ios-back-fill.svg" alt="icon: back to main page">
+    <img class="settings__arrow icon" src="../assets/svg/eva_arrow-ios-back-fill.svg" alt="icon: return back">
     <div class="settings__title">Settings</div>
   </header>
   <form class="settings__form">
