--- a/art-quiz/src/scss/category.scss
+++ b/art-quiz/src/scss/category.scss
@@ -12,7 +12,7 @@
     width: 160px;
     background: center / contain no-repeat url('../assets/svg/art_quiz_accent.svg');
   }
-  &__title{
+  &__title {
     display: flex;
     align-items: center;
     justify-content: start;
@@ -58,15 +58,17 @@
     position: absolute;
     bottom: 25px;
     left: 0;
-    width: 100%;
-    height: 50px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    width: 100%;
+    height: 50px;
+    padding: 0 15px;
     color: $main-color;
     background: $accent-color;
     transition: 0.2s;
     border-radius: 0 0 15px 15px;
+    pointer-events: none;
     transform-origin: bottom;
     transform: translateY(80px);
   }
@@ -99,11 +101,18 @@
       }
     }
   }
-  &__picture-description{
+  &__picture-description {
     @include flex-column;
-    height: 100px;
+    justify-content: center;
+    padding: 35px 0;
     font-size: $fz4;
     transform: translateY(130px);
+  }
+  &__picture-info {
+    font-weight: bold;
+    margin-bottom: 5px;
+    text-align: center;
+    font-size: 10px;
   }
 }
 
