--- a/art-quiz/src/scss/quiz.scss
+++ b/art-quiz/src/scss/quiz.scss
@@ -30,10 +30,9 @@
     margin-bottom: 20px;
     background-size: contain;
 
-    &.correct,
-    &.wrong {
+    &.wrong,
+    &.correct {
       position: relative;
-
       &:after {
         content: '';
         display: block;
@@ -61,10 +60,47 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  color: $bg-color;
   background-color: rgba(0, 0, 0, 0.5);
+
+  &.wrong .modal__content,
+  &.correct .modal__content {
+    padding-top: 20px;
+
+    .btn {
+      margin-top: 20px;
+      width: 100%;
+    }
+  }
+  &.wrong .modal__painting::after {
+    background-image: url('../assets/svg/wrong_check-circle.svg');
+  }
+  &.correct .modal__painting::after {
+    background-image: url('../assets/svg/correct_check-circle.svg');
+  }
+}
+.modal__painting {
+  position: relative;
+  margin-bottom: 15px;
+  height: 75vw;
+  width: 75vw;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border-radius: 15px;
+
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    width: 35px;
+    height: 35px;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
 }
 .modal__container {
-  padding-top: 150px;
+  padding-top: 100px;
 }
 .modal__content {
   position: relative;
@@ -106,6 +142,42 @@
   border-color: $bg-color;
   &_active {
     border-color: transparent;
+  }
+}
+
+.final-modal {
+  &.complete-quiz {
+    .modal__painting {
+      background-image: url('../assets/svg/win_champion-cup.svg');
+      height: 160px;
+      width: 170px;
+    }
+  }
+  &.lose-quiz {
+    .modal__painting {
+      background-image: url('../assets/svg/lose_champion-cup.svg');
+      height: 160px;
+      width: 170px;
+    }
+  }
+  &.win-quiz {
+    .modal__painting {
+      background-image: url('../assets/svg/congratulation_stars.svg');
+      height: 35vw;
+      width: 75vw;
+    }
+    .btn{
+      margin-top: 15px;
+      width: 100%;
+    }
+  }
+  .modal__score-state {
+    font-size: $fz1;
+    margin-bottom: 15px;
+  }
+  .modal__phrase {
+    font-size: $fz4;
+    margin-bottom: 20px;
   }
 }
 
