--- a/art-quiz/src/scss/index.scss
+++ b/art-quiz/src/scss/index.scss
@@ -9,13 +9,29 @@ $bg-color: #010101;
 $main-color: #010101;
 $correct-color: #3dda69;
 $wrong-color: #ff7e7e;
-$fz1: 30px;
+$fz1: 32px;
 $fz2: 28px;
 $fz3: 24px;
 $fz4: 22px;
 $fz5: 16px;
 $fz6: 14px;
-// $fz7: 9px;
+
+@media (min-width: 520px) {
+  $fz1: 34px;
+  $fz2: 28px;
+  $fz3: 24px;
+  $fz4: 22px;
+  $fz5: 20px;
+  $fz6: 16px;
+}
+@media (min-width: 1024px) {
+  $fz1: 36px;
+  $fz2: 28px;
+  $fz3: 42px;
+  $fz4: 28px;
+  $fz5: 20px;
+  $fz6: 16px;
+}
 
 @mixin basic-trans {
   transition: 200ms cubic-bezier(0.17, 0.67, 0.56, 0.84);
