--- a/art-quiz/src/components/entry.html
+++ b/art-quiz/src/components/entry.html
@@ -4,8 +4,10 @@
   </header>
   <div class="entry__inner">
     <div class="entry__logo"></div>
-    <button class="entry__btn btn" data-quiztype="artist">Artist quiz</button>
-    <button class="entry__btn btn" data-quiztype="painting">Pictures quiz</button>
+    <div class="entry__action">
+      <button class="entry__btn btn" data-quiztype="artist">Artist quiz</button>
+      <button class="entry__btn btn" data-quiztype="painting">Pictures quiz</button>
+    </div>
   </div>
 </div>
 <footer class="footer">
