--- a/art-quiz/src/components/settings.html
+++ b/art-quiz/src/components/settings.html
@@ -23,7 +23,7 @@
     </section>
     <section class="settings__section">
       <h2 class="settings__section-title">Time to answer</h2>
-      <div class="number-input">
+      <div class="number-input settings__number-input">
         <button class="number-input__minus" type="button">–</button>
         <input class="number-input__input" type="number" min="5" max="30" value="5" readonly>
         <button class="number-input__plus" type="button">+</button>
@@ -31,7 +31,7 @@
     </section>
   </form>
   <div class="settings__buttons">
-    <button class="settings__btn btn">Default</button>
-    <button class="settings__btn btn btn_active">Save</button>
+    <button class="settings__btn btn" data-default>Default</button>
+    <button class="settings__btn btn btn_active" data-save>Save</button>
   </div>
 </div>
