--- a/art-quiz/src/scss/index.scss
+++ b/art-quiz/src/scss/index.scss
@@ -1,83 +1,7 @@
-//TODO: mixin backgound
-//FIXME: btn height
-//FIXME: ovewrflow
-
 @import './normalize.css';
-
-$accent-color: #ffbca2;
-$bg-color: #010101;
-$main-color: #010101;
-$correct-color: #3dda69;
-$wrong-color: #ff7e7e;
-$fz1: 32px;
-$fz2: 28px;
-$fz3: 24px;
-$fz4: 22px;
-$fz5: 16px;
-$fz6: 14px;
-
-@media (min-width: 520px) {
-  $fz1: 34px;
-  $fz2: 28px;
-  $fz3: 24px;
-  $fz4: 22px;
-  $fz5: 20px;
-  $fz6: 16px;
-}
-@media (min-width: 1024px) {
-  $fz1: 36px;
-  $fz2: 28px;
-  $fz3: 42px;
-  $fz4: 28px;
-  $fz5: 20px;
-  $fz6: 16px;
-}
-
-@mixin basic-trans {
-  transition: 200ms cubic-bezier(0.17, 0.67, 0.56, 0.84);
-  transition-delay: 50ms;
-}
-@mixin flex-space-between {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-@mixin flex-column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.fadeIn {
-  animation-name: fadeIn;
-  animation-duration: 1s;
-  animation-timing-function: ease;
-}
-@keyframes fadeIn {
-  from {
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0%);
-    opacity: 1;
-  }
-}
-.fadeOut {
-  animation-name: fadeOut;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-}
-@keyframes fadeOut {
-  from {
-    transform: translateY(0%);
-    opacity: 1;
-  }
-  to {
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-}
-
+@import './constant.scss';
+@import './fonts.scss';
+@import './animation.scss';
 @import './base.scss';
 @import './entry.scss';
 @import './settings.scss';
