--- a/art-quiz/src/scss/base.scss
+++ b/art-quiz/src/scss/base.scss
@@ -1,33 +1,9 @@
-@font-face {
-  font-family: 'Quattrocento Sans';
-  src: url('../assets/font/QuattrocentoSans-Italic.ttf');
-  font-weight: normal;
-  font-style: italic;
-}
-@font-face {
-  font-family: 'Quattrocento Sans';
-  src: url('../assets/font/QuattrocentoSans-Regular.ttf');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Quattrocento Sans';
-  src: url('../assets/font/QuattrocentoSans-Bold.ttf');
-  font-weight: bold;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Quattrocento Sans';
-  src: url('../assets/font/QuattrocentoSans-BoldItalic.ttf');
-  font-weight: bold;
-  font-style: italic;
-}
-
 *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
+  user-select: none;
   box-sizing: border-box;
 }
 
@@ -35,7 +11,6 @@ body {
   font-family: 'Quattrocento Sans';
   font-weight: normal;
   color: #fff;
-  // overflow: hidden;
   background-color: $bg-color;
 }
 .container {
@@ -46,8 +21,7 @@ body {
 }
 .main {
   margin: 0 auto;
-  max-width: 830px;
-  // height: calc(100vh - 45px);
+  max-width: 1440px;
 }
 
 .btn {
