--- a/art-quiz/src/scss/settings.scss
+++ b/art-quiz/src/scss/settings.scss
@@ -32,8 +32,7 @@
     }
   }
   &__volume-icons {
-    display: flex;
-    justify-content: space-between;
+    @include flex-space-between;
     width: calc(100% - 30px);
     margin-top: 5px;
   }
@@ -102,9 +101,7 @@
 }
 
 .number-input {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  @include flex-space-between;
   height: 36px;
   width: 150px;
   font-size: $fz3;
