--- a/art-quiz/src/scss/quiz.scss
+++ b/art-quiz/src/scss/quiz.scss
@@ -61,16 +61,17 @@
     height: calc(60vh - 50px);
     max-width: 825px;
     margin-bottom: 20px;
-    @include cover-background;
+    @include smooth-cover-background;
     border-radius: 15px;
   }
   &__answer-painting {
     height: calc(50vmin - 100px);
     width: calc(50vmin - 100px);
-    @include cover-background;
+    min-width: 120px;
+    min-height: 120px;
+    @include smooth-cover-background;
     border-radius: 15px;
     cursor: pointer;
-    transition: background-image 9s ease-in-out;
   }
 }
 
@@ -113,7 +114,7 @@
   width: 50vmin;
   max-width: 550px;
   max-height: 550px;
-  @include cover-background;
+  @include smooth-cover-background;
   border-radius: 15px;
 
   &:after {
@@ -123,7 +124,7 @@
     left: 20px;
     width: 35px;
     height: 35px;
-    @include cover-background;
+    background: center / cover no-repeat;
   }
 }
 .modal__container {
@@ -177,23 +178,27 @@
 }
 
 .final-modal {
+  // .modal__result-img{
+  //   height: 50vmin;
+  //   width: 50vmin;
+  // }
   &.complete-quiz {
-    .modal__painting {
-      background-image: url('../assets/svg/win_champion-cup.svg');
+    .modal__result-img {
+      @include cover-background-image('../assets/svg/win_champion-cup.svg');
       height: 160px;
       width: 170px;
     }
   }
   &.lose-quiz {
-    .modal__painting {
-      background-image: url('../assets/svg/lose_champion-cup.svg');
+    .modal__result-img {
+      @include cover-background-image('../assets/svg/lose_champion-cup.svg');
       height: 160px;
       width: 170px;
     }
   }
   &.win-quiz {
-    .modal__painting {
-      background-image: url('../assets/svg/congratulation_stars.svg');
+    .modal__result-imgg {
+      @include cover-background-image('../assets/svg/congratulation_stars.svg');
       height: 35vw;
       width: 75vw;
     }
