--- a/art-quiz/src/scss/quiz.scss
+++ b/art-quiz/src/scss/quiz.scss
@@ -106,74 +106,76 @@
   &__painting-name {
     text-align: center;
   }
-}
-.modal__painting {
-  position: relative;
-  margin-bottom: 15px;
-  height: 50vmin;
-  width: 50vmin;
-  max-width: 550px;
-  max-height: 550px;
-  @include smooth-cover-background;
-  border-radius: 15px;
 
-  &:after {
-    content: '';
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    width: 35px;
-    height: 35px;
-    background: center / cover no-repeat;
+  &__painting {
+    position: relative;
+    margin-bottom: 15px;
+    height: 50vmin;
+    width: 50vmin;
+    max-width: 550px;
+    max-height: 550px;
+    @include smooth-cover-background;
+    border-radius: 15px;
+
+    &:after {
+      content: '';
+      position: absolute;
+      bottom: 20px;
+      left: 20px;
+      width: 35px;
+      height: 35px;
+      background: center / cover no-repeat;
+    }
   }
-}
-.modal__container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.modal__content {
-  position: relative;
-  @include flex-column;
-  width: 60vmin;
-  min-width: 290px;
-  padding: 60px 20px 30px;
-  background-color: #fff;
-  border-radius: 20px;
-  overflow-y: auto;
-}
-.modal__close {
-  position: absolute;
-  top: 8px;
-  right: 24px;
-  font-size: 50px;
-  color: #000;
-  opacity: 0.5;
-  font-weight: 100;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-}
-.modal__question {
-  margin-bottom: 55px;
-  max-width: 200px;
-  font-size: $fz4;
-  font-weight: bold;
-  text-align: center;
-  color: $bg-color;
-}
-.modal__action {
-  @include flex-space-between;
-  width: calc(100% - 20px);
-  gap: 20px;
-}
-.modal .btn {
-  flex-grow: 1;
-  display: block;
-  color: $bg-color;
-  border-color: $bg-color;
-  &_active {
-    border-color: transparent;
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__content {
+    position: relative;
+    @include flex-column;
+    width: 60vmin;
+    min-width: 290px;
+    padding: 60px 20px 30px;
+    background-color: #fff;
+    border-radius: 20px;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+  &__close {
+    position: absolute;
+    top: 8px;
+    right: 24px;
+    font-size: 50px;
+    color: #000;
+    opacity: 0.5;
+    font-weight: 100;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  &__question {
+    margin-bottom: 55px;
+    max-width: 200px;
+    font-size: $fz4;
+    font-weight: bold;
+    text-align: center;
+    color: $bg-color;
+  }
+  &__action {
+    @include flex-space-between;
+    width: calc(100% - 20px);
+    gap: 20px;
+  }
+  .btn {
+    flex-grow: 1;
+    display: block;
+    color: $bg-color;
+    border-color: $bg-color;
+    &_active {
+      border-color: transparent;
+    }
   }
 }
 
@@ -197,10 +199,10 @@
     }
   }
   &.win-quiz {
-    .modal__result-imgg {
+    .modal__result-img {
       @include cover-background-image('../assets/svg/congratulation_stars.svg');
-      height: 35vw;
-      width: 75vw;
+      height: 126px;
+      width: 324px;
     }
     .btn {
       flex-grow: 1;
