--- a/news-JS-main/src/components/view/sources/sources.css
+++ b/news-JS-main/src/components/view/sources/sources.css
@@ -1,14 +1,24 @@
 .sources {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    margin: 0 auto;
     width: 100%;
-    height: 120px;
+    max-width: 1440px;
+    height: 60vh;
     overflow: auto;
     align-items: center;
     font: 300 1em 'Fira Sans', sans-serif;
 }
 
+.sources[data-source] {
+    position: relative;
+    height: 60px;
+}
+
 .source__item {
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
     background: none;
     border: 2px solid #30c5ff;
     font: inherit;
