--- a/news-JS-main/src/components/view/sources/sources.css
+++ b/news-JS-main/src/components/view/sources/sources.css
@@ -20,21 +20,21 @@
     justify-content: center;
     flex-grow: 1;
     background: none;
-    border: 2px solid #30c5ff;
+    border: 2px solid var(--accent);
     font: inherit;
     line-height: 1;
     margin: 0.5em;
     padding: 1em 2em;
-    color: #70d6ff;
+    color: var(--accent-light);
     transition: 0.25s;
     cursor: pointer;
 }
 
 .source__item:hover,
 .source__item:focus {
-    border-color: #3fcc59;
-    color: #69db7e;
-    box-shadow: 0 0.5em 0.5em -0.4em #3fcc59;
+    border-color: var(--accent-hover);
+    color: var(--accent-light-hover);
+    box-shadow: 0 0.5em 0.5em -0.4em var(--accent-hover);
     transform: translateY(-0.25em);
 }
 
